--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ p {
     margin-left: 25px;
 }
 
-/*grouped class selectors as per scout role*/
+/*grouped class selectors as per scout rule*/
 .search-engine-optimization, 
 .online-reputation-management, 
 .social-media-marketing {
@@ -88,14 +88,14 @@ p {
     color: #ffffff;
 }
 
-/*grouped class selectors as per scout role*/
+/*grouped class selectors as per scout rule*/
 .search-engine-optimization img, 
 .online-reputation-management img, 
 .social-media-marketing img {
     max-height: 200px;
 }
 
-/*grouped class selectors as per scout role*/
+/*grouped class selectors as per scout rule*/
 .search-engine-optimization h2,
 .online-reputation-management h2,
 .social-media-marketing h2
@@ -116,7 +116,7 @@ p {
     background-color: #2589bd;
 }
 
-/*grouped class selectors as per scout role*/
+/*grouped class selectors as per scout rule*/
 .benefit-lead, 
 .benefit-brand, 
 .benefit-cost {
@@ -124,7 +124,7 @@ p {
     color: #ffffff;
 }
 
-/*grouped class selectors as per scout role*/
+/*grouped class selectors as per scout rule*/
 .benefit-lead h3, 
 .benefit-brand h3, 
 .benefit-cost h3 {
@@ -132,7 +132,7 @@ p {
     text-align: center;
 }
 
-/*grouped class selectors as per scout role*/
+/*grouped class selectors as per scout rule*/
 .benefit-lead img, 
 .benefit-brand img, 
 .benefit-cost img {
